--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,10 @@
     {
       "type": "path",
       "url": "packages/backend-theme"
+    },
+    {
+      "type": "path",
+      "url": "packages/shop-store"
     }
   ],
   "minimum-stability": "dev",
@@ -29,7 +33,8 @@
     "drupal-composer/preserve-paths": "0.1.*",
     "johnpbloch/wordpress-core": "~5.0",
     "johnpbloch/wordpress-core-installer": "^1.0",
-    "walker/backend-theme": "dev-master"
+    "walker/backend-theme": "dev-master",
+    "walker/shop-store": "dev-master"
   },
   "extra": {
     "installer-paths": {
